chore: Fix z-index for dropdown

--- a/src/components/select-field/SelectField.scss
+++ b/src/components/select-field/SelectField.scss
@@ -31,7 +31,7 @@
 }
 
 .bdl-SelectFieldDropdown {
-    z-index: 2;
+    z-index: 4;
     min-width: 100%;
     overflow-x: hidden;
 }
